# rskit

./: .gitignore  README.md  pyproject.toml  salmon.181061.out  salmon.184023.out  setup.py  test.sh
data/: coldata.csv  deseq2_downregulated.csv  deseq2_significant.csv  deseq2_upregulated.csv
rskit/: __init__.py  cli.py  config.py
rskit/core/: __init__.py  base.py  deseq2.py  gtf.py  pipeline.py  salmon.py  star.py  wgcna.py
rskit/utils/: __init__.py  gtf.py  logger.py  parallel.py  validators.py
tests/: test_quant_expression.py
