[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rskit"
version = "0.1.0"
description = "Python interface for RNA-seq analysis tools"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "pydeseq2",
]

[project.scripts]
rskit = "rskit.cli:main"
